# wisp

./: CMakeLists.txt  LICENSE  PROTOCOL.md  README.md
.github/workflows/: build.yml  ci.yml  coverage.yml
bindings/ada/: Makefile  README.md  wisp_ada.gpr
bindings/ada/examples/: demo_handlers.adb  demo_handlers.ads  wisp_demo.adb
bindings/ada/src/: wisp-c_api.ads  wisp.adb  wisp.ads
bindings/polling/: CMakeLists.txt  wisppoller.h
bindings/python/: README.md  demo.py  wisp.py
bindings/qt/: CMakeLists.txt  qtconnectionadapter.h
client1/: main.cpp
client2/: main.cpp
cmake/: WispConfig.cmake.in
common/: CMakeLists.txt  beacon.cpp  beacon.h  config.h  connectionapi.cpp  connectionapi.h  connectionmanager.cpp  connectionmanager.h  libwisp.map  logger.h  messagekeys.h  safequeue.h  uuidhelper.h  wireframe.h  workerinterface.h  zmqworker.cpp  zmqworker.h
common/adapters/: qtconnectionadapter.h
common/generated-c/: broker.pb-c.c  broker.pb-c.h
common/proto/: broker.proto
examples/client1/: CMakeLists.txt  main.cpp
examples/client2/: CMakeLists.txt  main.cpp
inspector/: CMakeLists.txt  inspectorworker.cpp  inspectorworker.h  main.cpp  mainwindow.cpp  mainwindow.h  packettablemodel.cpp  packettablemodel.h  protoutils.h
server/: CMakeLists.txt  discovery.cpp  discovery.h  main.cpp  subscriptionregistry.h  zmqbroker.cpp  zmqbroker.h
sniffer/: main.cpp
tests/: CMakeLists.txt  any_frame_test.cpp  any_payload_roundtrip_test.cpp  beacon_test.cpp  c_bindings_test.cpp  callback_shapes_test.cpp  client_id_correction_test.cpp  cluster_swap_test.cpp  dedup_text_uuid_test.cpp  delivery_test.cpp  discovery_test.cpp  handshake_test.cpp  header_codec_test.cpp  inspector_tap_test.cpp  message_size_limit_test.cpp  peer_backpressure_test.cpp  peer_link_test.cpp  polling_adapter_test.cpp  qt_adapter_test.cpp  safequeue_test.cpp  session_recovery_test.cpp  set_cluster_test.cpp  shutdown_from_callback_test.cpp  shutdown_test.cpp  stats_test.cpp  subscription_limits_test.cpp  subscriptionregistry_test.cpp  unsubscribe_while_offline_test.cpp  uuid_test.cpp  wildcard_subscription_test.cpp
tests/support/: test_helpers.h
tests/throughput/: throughput_bench.cpp
